fix: overlay overflow

--- a/src/app/components/layout/layout/layout.component.scss
+++ b/src/app/components/layout/layout/layout.component.scss
@@ -43,9 +43,9 @@
   overflow-y: auto;
 }
 
-// .content-on-show-menu {
-//   overflow-y: unset;
-// }
+.content.overlayed {
+  overflow: hidden;
+}
 
 .overlay {
   display: none;
@@ -56,7 +56,7 @@
   display: block;
   overflow: hidden;
   width: 100%;
-  height: 100%;
+  height: 1000vh;
   top: 0;
   left: 0;
   right: 0;
